@startuml

title __PROYECTO's Class Diagram__\n

  namespace proyecto {
    class proyecto.AStar {
        + minimun_road : ArrayList<Node>
        - cont : int
        - distance : double
        - generated_nodes : int
        - not_visited_nodes : ArrayList<Node>
        - objetives_nodes : ArrayList<Node>
        + AStar()
        + calculateMinimunRoad()
        + generateSons()
        + getDistance()
        - getMinimunFNode()
        - isViableRoad()
        - setMinimunRoad()
    }
  }
  

  namespace proyecto {
    class proyecto.AgregarVehiculoGUI {
        - agregarVehículoButton : JButton
        - cbInicio : JComboBox
        - cbType : JComboBox
        {static} - optOriginsList : ArrayList<Integer>
        {static} - optTypesList : ArrayList<String>
        - panelAgregarVehiculo : JPanel
        + getPanelAgregarVehiculo()
        ~ AgregarVehiculoGUI()
        - agregarVehiculo()
        - fillComboBoxes()
        - fillOptOriginsList()
        - fillOptTypeList()
    }
  }
  

  namespace proyecto {
    class proyecto.AgregarVehiculoGUIFrame {
        ~ AgregarVehiculoGUIFrame()
    }
  }
  

  namespace proyecto {
    class proyecto.AstarSearch {
        {static} + main()
    }
  }
  

  namespace proyecto {
    class proyecto.Graph {
        # finalNodeID : int
        # n_nodes_ : int
        # originNodeID : int
        - distances : HashMap<Integer, ArrayList<Double>>
        {static} - distancesFile : String
        {static} - heuristicsFile : String
        {static} - node_list_ : ArrayList<Node>
        + Graph()
        + getDistances()
        {static} + getNode_list()
        # getNNodes()
        # getNodeList()
        - buildDistances()
        - buildDistancesMatrix()
        - buildHeuristics()
        - insertDistances()
    }
  }
  

  namespace proyecto {
    class proyecto.InfoVehicleFrame {
        ~ InfoVehicleFrame()
    }
  }
  

  namespace proyecto {
    class proyecto.InfoVehicleGUI {
        - botonEliminarVehiculo : JButton
        - carreteraTxt : JLabel
        - frame : JFrame
        - idInfoTxt : JLabel
        - idTxt : JLabel
        - infoVehiculoTitle : JLabel
        - lineaRectaTxt : JLabel
        - panelInfoVehiculo : JPanel
        - roadInfoTxt : JLabel
        - straightLineInfoTxt : JLabel
        - tipoTxt : JLabel
        - typeInfoTxt : JLabel
        + getPanelInfoVehiculo()
        ~ InfoVehicleGUI()
    }
  }
  

  namespace proyecto {
    class proyecto.LogisticaGUI {
        {static} + contID : int
        - botonAgregarVehículo : JButton
        {static} - listaVehiculos : Map<Vehiculo, Thread>
        - logisticaTerrestreTxt : JLabel
        {static} - model : DefaultTableModel
        - panelLogisticaTerrestre : JPanel
        - scrollTablaVehículos : JScrollPane
        - tablaVehículos : JTable
        {static} + getListaVehiculos()
        {static} + getModel()
        + getPanelLogisticaTerrestre()
        ~ LogisticaGUI()
        - setHeaders()
    }
  }
  

  namespace proyecto {
    class proyecto.LogisticaGUIFrame {
        ~ LogisticaGUIFrame()
    }
  }
  

  namespace proyecto {
    class proyecto.Node {
        {static} # n_nodos : int
        ~ analized : boolean
        ~ objetive_ : boolean
        ~ origin_ : boolean
        - f_ : double
        - g_ : double
        - h_ : double
        - nodeID_ : int
        - sons_distances : ArrayList<Double>
        - sons_nodes : ArrayList<Node>
        + addSon()
        + clone()
        + getDistance()
        + getFather()
        + getHeuristic()
        + getNodeID()
        + getSonsDistances()
        + getSonsList()
        + getValue()
        + isObjetive()
        + setDistance()
        + setFather()
        + setHeuristic()
        + setValue()
        + toString()
        # isOrigin()
        # setObjetive()
        # setOrigin()
        ~ Node()
    }
  }
  

  proyecto.AStar o-- proyecto.Graph : graph_
  proyecto.AgregarVehiculoGUI -up-|> javax.swing.JPanel
  proyecto.AgregarVehiculoGUIFrame -up-|> javax.swing.JFrame
  proyecto.AgregarVehiculoGUIFrame o-- proyecto.AgregarVehiculoGUI : agregarVehiculoGUI
  proyecto.InfoVehicleFrame -up-|> javax.swing.JFrame
  proyecto.InfoVehicleFrame o-- proyecto.InfoVehicleGUI : infoVehicleGUI
  proyecto.InfoVehicleGUI -up-|> javax.swing.JPanel
  proyecto.InfoVehicleGUI o-- proyecto.vehiculos.Vehiculo : vehiculo
  proyecto.LogisticaGUI -up-|> javax.swing.JPanel
  proyecto.LogisticaGUIFrame -up-|> javax.swing.JFrame
  proyecto.LogisticaGUIFrame o-- proyecto.LogisticaGUI : logisticaGUI
  proyecto.Node o-- proyecto.Node : father_node


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
